// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytics > GoogleTagManager init 1`] = `
Array [
  Object {
    "event": "gtm.js",
    "gtm.start": 1530202469377,
  },
  Object {
    "event": "wpPwaProperties",
    "wpPwaProperties": Object {
      "anonymize": false,
      "dev": true,
      "extensions": "saturn-theme,wp-org-connection",
      "pageType": "pwa",
      "plan": "enterprise",
      "siteId": "site1122334455",
      "theme": "saturn-theme",
      "userIds": Array [
        "user00",
        "user01",
      ],
    },
  },
  Object {
    "event": "virtualPageview",
    "virtualPageview": Object {
      "customDimensions": null,
      "format": "pwa",
      "hash": "ZO0H2I9kJ0arOdstZdG",
      "id": 60,
      "page": undefined,
      "route": "single",
      "site": "https://demo.frontity.test",
      "title": "The Beauties of Gullfoss",
      "type": "post",
      "url": "https://demo.frontity.test/the-beauties-of-gullfoss/",
    },
  },
]
`;

exports[`Analytics > GoogleTagManager sendEvent 1`] = `
Array [
  Object {
    "event": "virtualEvent",
    "virtualEvent": Object {
      "action": "PWA - test/action",
      "category": "PWA - test/category",
      "label": "test/label type: post context: single",
    },
  },
]
`;

exports[`Analytics > GoogleTagManager sendPageView 1`] = `
Array [
  Object {
    "event": "virtualPageview",
    "virtualPageview": Object {
      "customDimensions": null,
      "format": "pwa",
      "hash": "ZO0H2I9kJ0arOdstZdG",
      "id": 60,
      "page": undefined,
      "route": "single",
      "site": "https://demo.frontity.test",
      "title": "The Beauties of Gullfoss",
      "type": "post",
      "url": "https://demo.frontity.test/the-beauties-of-gullfoss/",
    },
  },
  Object {
    "event": "virtualPageview",
    "virtualPageview": Object {
      "customDimensions": null,
      "format": "pwa",
      "hash": "F1IyuIcMmLJVe2Je0OX",
      "id": 7,
      "page": 2,
      "route": "list",
      "site": "https://demo.frontity.test",
      "title": "Photography",
      "type": "category",
      "url": "https://demo.frontity.test/wp-cat/photography/page/2",
    },
  },
]
`;
